--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ h5.widget-title {
 
 }
 
-.textwidget.investment-button a {
+.investment-button a {
     text-align: center;
     margin-left: 37%;
 }
