--- a/style.css
+++ b/style.css
@@ -268,6 +268,10 @@ h5.widget-title {
     margin-bottom: 25px;
 }
 
+.learn-more-budget-title p {
+    text-align: center;
+}
+
 
 /* Blog Page */
 
