--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ header .logo{
   background-color: #174A7F;
 }
 
+.gray-background{
+  background-color: #c7d6e0;
+}
 /* Footer */
 footer{
   background-color: #174A7F;
