--- a/style.css
+++ b/style.css
@@ -280,6 +280,13 @@ h5.widget-title {
     margin-bottom: -51px;
 }
 
+.donate-button{
+  background-color: #40B2B1;
+  color: white;
+  padding: 8px 20px;
+  border-radius: 5px;
+}
+
 
 /* Blog Page */
 
