--- a/style.css
+++ b/style.css
@@ -291,7 +291,7 @@ h5.widget-title {
 
 .donate-button:hover{
   background-color: #c7d6e0;
-  color: #ffffff;
+  color: #174A7F;
   padding: 8px 20px;
   text-decoration: none;
 }
