--- a/style.css
+++ b/style.css
@@ -174,6 +174,10 @@ footer img:hover{
   height: 90vh;
 }
 
+.hero-image-text h3 {
+  font-size: 5rem;
+}
+
 .centered {
     position: absolute;
     top: 50%;
@@ -206,10 +210,6 @@ button.button-primary.hero-button:hover {
   display: flex;
   object-fit: cover;
 }
-
-/* img.image.wp-image-178.attachment-full.size-full {
-    min-width: 100%;
-} */
 
 /* Learn More */
 
