--- a/style.css
+++ b/style.css
@@ -98,8 +98,15 @@ header .logo{
 #wprmenu_bar .menu_title a {
     display: inline-block;
     position: relative;
-    top: 0px;
-    margin-left: 35%;
+    top: 18px;
+    margin-left: 31%;
+}
+
+#wprmenu_bar .bar_logo {
+    border: none;
+    margin: 0;
+    padding: 0px 8px 0px 0px;
+    height: 63px;
 }
 
 .blue-background{
