--- a/style.css
+++ b/style.css
@@ -794,6 +794,9 @@ img.image.wp-image-98.attachment-full.size-full {
   img.image.wp-image-98.attachment-full.size-full {
     margin-top: -15px;
   }
+  .resource-background {
+    margin-top: -50px;
+}
 
 }
 
