--- a/style.css
+++ b/style.css
@@ -805,6 +805,13 @@ img.image.wp-image-98.attachment-full.size-full {
   .one-third.column.posts {
     margin-left: 35px;
   }
+  .money-color {
+    margin-right: 9px;
+    text-align: center;
+  }
+  .learn-more-budget-title {
+    margin-right: 27px;
+  }
 
 }
 
