--- a/style.css
+++ b/style.css
@@ -396,7 +396,7 @@ input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focu
     border-color: #40B2B1;
 }
 
-.contact-us{
+.contact-form{
   padding: 20px 0 30px 0;
 }
 
