--- a/style.css
+++ b/style.css
@@ -393,8 +393,9 @@ p.p.l {
     color: #fff;
 }
 
-input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="text"]:focus, input[type="tel"]:focus, input[type="url"]:focus, input[type="password"]:focus, textarea:focus {
-    border-color: #40B2B1;
+div#wpforms-confirmation-276 {
+    background: #40B2B1;
+    border: 1px solid #174A7F;
 }
 
 .contact-form{
