--- a/style.css
+++ b/style.css
@@ -396,6 +396,7 @@ p.p.l {
 div#wpforms-confirmation-276 {
     background: #40B2B1;
     border: 1px solid #174A7F;
+    color: #fff;
 }
 
 .contact-form{
