--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ h5.widget-title {
 .iv-color{
   background-color:#c7d6e0;
   padding-top: 30px;
-  padding-bottom: 50px;
+  padding: 20px 0 30px 0;
 
 }
 
