fix blog header

--- a/style.css
+++ b/style.css
@@ -308,6 +308,9 @@ h5.widget-title {
     margin-left: 25px;
     margin-top: 40px;
 }
+.container.blog {
+    padding: 20px 0 30px 0;
+}
 
 .blog-row{
   padding-top: 10px;
