add reserach title padding

--- a/style.css
+++ b/style.css
@@ -561,6 +561,10 @@ div#wpforms-confirmation-276 {
   background-color: #174A7F;
 }
 
+.research-title {
+    padding: 20px 0 30px 0;
+}
+
 
 /* ABOUT PAGE */
 
