--- a/style.css
+++ b/style.css
@@ -669,7 +669,7 @@ div#wpforms-confirmation-276 {
 
 }
 
-@media (max-width: px) {
+@media (max-width: 750px) {
 
   .widget-title {
     font-size: 1em;
