--- a/style.css
+++ b/style.css
@@ -671,8 +671,12 @@ div#wpforms-confirmation-276 {
 
 @media (max-width: 750px) {
 
-  .hero-image-text {
-    font-size: 1.6em;
+  .hero-image-text h3 {
+    font-size: 2rem;
+  }
+  
+  .hero-image-text p {
+    font-size: 0.9rem;
   }
 }
 
