--- a/style.css
+++ b/style.css
@@ -25,10 +25,6 @@ body{
   color: #383E4B;
 }
 
-html {
-  padding-top: 85px !important;
-}
-
 h1, h2, h3, h4, h5{
   font-family: 'Lato', sans-serif;
   color: #174A7F;
@@ -98,14 +94,14 @@ header .logo{
   height: auto;
 }
 
-.bar_logo {
-  height: 4em;
+.bar_logo .logo {
+  height: 4em !important;
 }
 
 .menu_title {
-  top: -27px;
-  bottom: 0px;
-  left: 26px;
+  top: -27px !important;
+  bottom: 0px !important;
+  left: 26px !important;
 }
 
 .blue-background{
