Add more logo css

--- a/style.css
+++ b/style.css
@@ -653,7 +653,7 @@ div#wpforms-confirmation-276 {
     margin: 0;
     padding: 0px 8px 0px 0px;
     width: auto;
-    height: 75px;
+    height: 75px !important;
     margin-top: -16px;
 }
 
