--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@ div#wpforms-confirmation-276 {
   visibility: hidden;
 }
 */
-
+/* 
 #wprmenu_bar .bar_logo {
     border: none;
     margin: 0;
@@ -655,7 +655,7 @@ div#wpforms-confirmation-276 {
   left: 0px !important;
   right: 0px !important;
   text-align: center !important;
-}
+} */
 
 /* MEDIA QUERIES (HEADER_NAV) */
 
