--- a/style.css
+++ b/style.css
@@ -597,7 +597,8 @@ div#wpforms-confirmation-276 {
 .right {
   position: absolute;
   top: 50%;
-  left: 80%;
+  right: -10%;
+  left: 67%;
   transform: translate(-50%, -50%);
   padding: 40px;
 }
@@ -697,11 +698,13 @@ img.bar_logo {
   
 }
 
-@media (max-width: 1085px) {
+@media (max-width: 1020px) {
 
   .right {
-    right: -30%;
-    left: 67%;
+    position: relative;
+    margin: 40px;
+    float: none;
+    width: 100%;
   }
 }
 
