--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ White: #F4FAFE;
 body{
   background-color: #F4FAFE;
   color: #383E4B;
+  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5{
@@ -874,6 +875,12 @@ img.bar_logo {
 
 }
 
+@media (max-width: 550px) {
+  .hero-image-about img {
+      min-width: 550px;
+  }
+}
+
   @media (max-width: 414px) {
     .hero-image-blog img {
         width: 136%;
@@ -883,7 +890,7 @@ img.bar_logo {
     h2.blog-post-title {
     font-size: 3rem;
   }
-  }
+}
 
 @media (max-width: 407px) {
 
