--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ footer img:hover{
   text-align: center;
 }
 
-button.button-primary.hero-button {
+/* button.button-primary.hero-button {
     font-size: 1.5rem;
 }
 
@@ -218,6 +218,16 @@ button.button-primary.hero-button {
 button.button-primary.hero-button:hover {
     background-color: #174A7F;
     border-color: #174A7F;
+} */
+
+.hero-button{
+  background-color: #40B2B1;
+  color: #fff;
+  border-radius: 5px;
+  border: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.5rem;
+  padding: 8px 20px;
 }
 
 .home-image img{
@@ -385,7 +395,7 @@ p.p.l {
   padding: 30px;
 }
 
-.contact-form button#wpforms-submit-276, .hero-button {
+.contact-form button#wpforms-submit-276 {
   background-color: #40B2B1;
   color: #fff;
   border-radius: 5px;
