Changed our plans to research in code

--- a/style.css
+++ b/style.css
@@ -419,41 +419,41 @@ div#wpforms-confirmation-276 {
   flex-wrap: wrap;
 }
 
-/* OUR PLAN PAGE */
+/* RESEARCH PAGE */
 
-.our_plan {
+/* .our_plan {
   color: #F4FAFE;
   text-align: center;
   font-size: 2.3em;
   padding: 20px;
   margin: 0;
-}
+} */
 
-.our-plan-stage1 {
+.research-stage1 {
   color: #F4FAFE;
   font-size: 1.7em;
   padding-bottom: 15px;
 }
 
-.our-plan-stage2 {
+.research-stage2 {
   color: #383E4B;
   font-size: 1.7em;
   padding-bottom: 15px;
 }
 
-.our-plan-stage3 {
+.research-stage3 {
   color: #383E4B;
   font-size: 1.7em;
   padding-bottom: 15px;
 }
 
-.our-plan-stage4 {
+.research-stage4 {
   color: #F4FAFE;
   font-size: 1.7em;
   padding-bottom: 15px;
 }
 
-.our-plan-stage5 {
+.research-stage5 {
   color: #383E4B;
   font-size: 1.7em;
   padding-bottom: 15px;
