--- a/style.css
+++ b/style.css
@@ -652,6 +652,7 @@ div#wpforms-confirmation-276 {
 img.bar_logo {
   position: relative;
   top: -20px;
+  left: -15px;
 }
 
 html body .wprm-overlay.active {
