--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ White: #F4FAFE;
 body{
   background-color: #F4FAFE;
   color: #383E4B;
+  overflow-x:hidden
 }
 
 h1, h2, h3, h4, h5{
@@ -881,6 +882,9 @@ html body .wprm-overlay.active {
 @media (max-width: 550px) {
   .hero-image-about img {
       min-width: 550px;
+  }
+  .menu-footer-nav {
+      font-size: .8em;
   }
 }
 
